fix(css): remove `div.content`
Fix extra padding around main content, which adds to
much margin when on a smaller screen

--- a/static/style.css
+++ b/static/style.css
@@ -163,10 +163,6 @@ nav {
     align-content: center;
 }
 
-.content {
-    padding: 0 2rem;
-}
-
 ul.archive-list {
     list-style: none;
     margin: 0;
